--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .control-panel {
-    width: 400px;
+    width: 700px;
     height: 50px;
     position: absolute;
     top: 0;
@@ -7,6 +7,11 @@
     transform: translate(-50%);
     background-color: gray;
     padding: 0 20px;
+}
+
+.control-panel * {
+    /* height: 40px; */
+    border: 1px solid black;
 }
 
 .flex {
@@ -20,3 +25,4 @@
 .space-between {
     justify-content: space-between;
 }
+
